# rollfast

./: .gitignore  .gitlab-ci.yml  README.md  devenv.nix  pyproject.toml
benchmarks/finetuning/: README.md  _common.py  convergence.py  memory.py  throughput.py
benchmarks/optimizer_state/: adamw8.py
docs/: usage.md
docs/dev/: finetuning_audit.md
docs/finetuning/: averaging.md  state_and_checkpoints.md
examples/: adamw_quickstart.py  schedule_free_eval.py
examples/finetuning/: equimo_adalora.py  equimo_adamw8.py  equimo_asam.py  equimo_ema.py  equimo_full_ft_llrd.py  equimo_hybrid_aurora.py  equimo_linear_probe.py  equimo_lora.py  equimo_lpft_transition.py  equimo_sam.py  equimo_schedule_free_lora.py  state_memory_report.py
src/rollfast/: __init__.py  utils.py
tests/: _typing.py  test_adam.py  test_adam8.py  test_api.py  test_aurora.py  test_complex_matrix_policy.py  test_dimension_numbers.py  test_equimo_integration.py  test_hyperball.py  test_magma.py  test_matrix_runtime.py  test_muon.py  test_normuon.py  test_orthogonalization.py  test_pion.py  test_prism.py  test_psgd.py  test_rmnp.py  test_sam.py  test_schedulefree.py  test_soda.py  test_stochastic_rounding.py  test_trasmuon.py  test_utils.py  test_wsd.py
tests/compat/: test_optimizer_signatures.py  test_public_imports.py
tests/finetune/: __init__.py  helpers.py  test_adalora_controller.py  test_adamw8_from_plan.py  test_adamw_from_plan.py  test_apollo_from_plan.py  test_averaging.py  test_configs.py  test_distributed_global_norm.py  test_factorized_compiler.py  test_galore_from_plan.py  (+16 more)
(+45 files in other folders)
