[project]
name = "rollfast"
version = "0.4.2"
description = "JAX implementation of experimental optimizers and schedulers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "clementpoiret", email = "clement@linux.com" }
]
keywords = [
    "jax",
    "optax",
    "optimizer",
    "psgd",
    "deep-learning",
    "second-order-optimization",
    "preconditioning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.6.2",
    "optax>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/clementpoiret/rollfast"
Repository = "https://github.com/clementpoiret/rollfast"
Issues = "https://github.com/clementpoiret/rollfast/issues"

[build-system]
requires = ["uv_build>=0.9.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "equimo>=0.5.0a17",
    "equinox>=0.13.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ruff.lint]
ignore = ["E731", "E741", "F722"]

[tool.ruff.lint.per-file-ignores]
"tests/test_equimo_integration.py" = ["F401"]
